--- a/index.html
+++ b/index.html
@@ -185,10 +185,7 @@ FIG. 28 While it features symmetrical, interwoven curves in yellow and orange, i
 
 FIG. 29  The signal quality is affected by inter-symbol interference (ISI), timing jitter, amplitude noise, and crosstalk, resulting in partially closed eye openings and reduced vertical eye height. These impairments are typical in high-speed serial links like PCIe Gen 6 and can lead to increased bit error rates. To improve signal integrity, it's recommended to apply advanced equalization techniques (e.g., CTLE, DFE), optimize transmitter settings (pre-emphasis, swing levels), enhance clock recovery, and refine PCB layout to minimize reflections and coupling. Additionally, ensuring clean power delivery, proper termination, and impedance matching will help stabilize the signal and open the eyes for better performance.
 
-FIG. 30 The eye diagram showing overlapping blue waveform traces that form the characteristic multi-level "eye" shapes. The eye openings are partially closed, indicating the presence of timing jitter, inter-symbol interference (ISI), and voltage noise. These impairments reduce the clarity of the signal transitions and can lead to higher bit error rates. To improve signal integrity, it's recommended to apply equalization techniques, optimize transmitter settings, and refine PCB layout to reduce reflections and crosstalk. Additionally, ensuring clean power delivery and minimizing ground bounce will help stabilize the signal levels.
-
-
-
+FIG. 30 The eye diagram presents a perfect PCIe Gen 6 PAM4 eye diagram, characterized by three distinct, symmetrical, and wide-open eye patterns that indicate excellent signal integrity. The clarity and uniformity of the eye openings suggest minimal jitter, noise, and inter-symbol interference (ISI), confirming that the transmission channel is well-optimized for high-speed data communication. Such a pristine eye diagram reflects ideal conditions for PAM4 signaling, ensuring reliable bit separation and low error rates—critical for PCIe Gen 6 performance. This serves as a benchmark example of a well-engineered high-speed link.
 </body>
 </html>
 
